<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!--TAB LAYOUT-->
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_layout">

    </android.support.v4.view.ViewPager>

    <!--TOOLBAR WITH ALL BUTTONS-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/btnPlay"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:onClick="playSong"
            android:text="@string/play"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/btnPause"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_gravity="center"

            android:onClick="pauseSong"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:onClick="stopSong"

            android:text="@string/stop"
            android:layout_gravity="right"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/currentlocation"/>


    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>